# rp2040_ov7670_usb_camera

./: CMakeLists.txt  README.md
src/: main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
src/ov7670/: image.pio  ov7670.c  ov7670.h  ov7670_init.h
